Image not showing, Brands slider Image Path Fixed

--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
                 <div class="brands-slider">
                     <div class="brands-track">
                         <picture class="brands-logos">
-                            <img src="/assets/images/cp-1.png" alt="brand" />
-                            <img src="/assets/images/cp-2.png" alt="brand" />
-                            <img src="/assets/images/cp-3.png" alt="brand" />
-                            <img src="/assets/images/cp-4.png" alt="brand" />
-                            <img src="/assets/images/cp-5.png" alt="brand" />
-                            <img src="/assets/images/cp-6.png" alt="brand" />
-                            <img src="/assets/images/cp-7.jpg" alt="brand" />
-                            <img src="/assets/images/cp-8.png" alt="brand" />
+                            <img src="./assets/images/cp-1.png" alt="brand" />
+                            <img src="./assets/images/cp-2.png" alt="brand" />
+                            <img src="./assets/images/cp-3.png" alt="brand" />
+                            <img src="./assets/images/cp-4.png" alt="brand" />
+                            <img src="./assets/images/cp-5.png" alt="brand" />
+                            <img src="./assets/images/cp-6.png" alt="brand" />
+                            <img src="./assets/images/cp-7.jpg" alt="brand" />
+                            <img src="./assets/images/cp-8.png" alt="brand" />
 
                             <!-- Duplicate for seamless loop -->
-                            <img src="/assets/images/cp-1.png" alt="brand" />
-                            <img src="/assets/images/cp-2.png" alt="brand" />
-                            <img src="/assets/images/cp-3.png" alt="brand" />
-                            <img src="/assets/images/cp-4.png" alt="brand" />
-                            <img src="/assets/images/cp-5.png" alt="brand" />
+                            <img src="./assets/images/cp-1.png" alt="brand" />
+                            <img src="./assets/images/cp-2.png" alt="brand" />
+                            <img src="./assets/images/cp-3.png" alt="brand" />
+                            <img src="./assets/images/cp-4.png" alt="brand" />
+                            <img src="./assets/images/cp-5.png" alt="brand" />
                         </picture>
                     </div>
                 </div>
